Fix beautiful scrollbar horizontal height

--- a/igloo/igloo-webjars/bootstrap5-override/src/main/webjars/scss/extend/_beautiful-scrollbar.scss
+++ b/igloo/igloo-webjars/bootstrap5-override/src/main/webjars/scss/extend/_beautiful-scrollbar.scss
@@ -1,6 +1,7 @@
 @mixin beautiful-scrollbar($important: false) {
 	&::-webkit-scrollbar {
 		width: 6px important($important);
+		height: 6px important($important);
 	}
 	 
 	&::-webkit-scrollbar-track {
